--- a/events/weekend.html
+++ b/events/weekend.html
@@ -15,7 +15,7 @@
 			</header>
 			<!--Navigation Section-->
 			<nav>
-				<a href="../index.html">Home</a></li>&nbsp;
+				<a href="../index.html">Home</a>&nbsp;
 				<a href="../rooms/room1.html">Room 1</a>&nbsp;
 				<a href="../rooms/room2.html">Room 2</a>&nbsp;
 				<a href="weekend.html">Weekend Events</a>&nbsp;
