Added the Phase 2 files/updates
I did it correctly this time :D

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 		<title>Hulber's Bed & Breakfest</title> <!--This changes the title of the tab-->
 		<meta charset="utf-8"> <!--This defines the charecter unicode that the site will use-->
 		<link href="styles/styles.css" rel="stylesheet"> <!--This links the style sheet-->
+		<link rel="icon" type="image/png" href="images/icon.png"> <!--This icon was created by me for a GTA Online crew, very interesting right? You can find it via this link: https://prod.cloud.rockstargames.com/crews/sc/3986/70001500/publish/emblem/emblem_128.png -->
 	</head>
 	<!--Body Section-->
 	<body>
@@ -16,8 +17,8 @@
 			<!--Navigation Section-->
 			<nav>
 				<a href="index.html">Home</a>&nbsp;
-				<a href="rooms/room1.html">Room 1</a>&nbsp;
-				<a href="rooms/room2.html">Room 2</a>&nbsp;
+				<a href="rooms/lavender_room.html">Cozy Lavender Room</a>&nbsp;
+				<a href="rooms/space_room.html">Galatic Bedroom</a>&nbsp;
 				<a href="events/weekend.html">Weekend Events</a>&nbsp;
 				<a href="contact.html">Contact</a>
 			</nav>
