Phase 3 files/updates uploaded
Finished Phase 3 of the final, files have been uploaded to reflect changes.

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 				<a href="index.html">Home</a>&nbsp;
 				<a href="rooms/lavender_room.html">Cozy Lavender Room</a>&nbsp;
 				<a href="rooms/space_room.html">Galatic Bedroom</a>&nbsp;
-				<a href="events/weekend.html">Weekend Events</a>&nbsp;
+				<a href="events/weekend.html">Events</a>&nbsp;
 				<a href="contact.html">Contact</a>
 			</nav>
 			<!--Main Section-->
@@ -28,7 +28,7 @@
 			</main>
 			<!--Footer Section-->
 			<footer>
-				Copyright &copy; 2025 <a href="mailto:hjespinosa@amarillocollege.com">Webmaster</a>
+				Copyright &copy; 2025 <a href="mailto:hjespinosa@amarillocollege.com">Webmaster</a> (prices don't include tax)
 			</footer>
 		</div>
 	</body>
