--- a/rooms/lavender_room.html
+++ b/rooms/lavender_room.html
@@ -19,7 +19,7 @@
 				<a href="../index.html">Home</a>&nbsp;
 				<a href="lavender_room.html">Cozy Lavender Room</a>&nbsp;
 				<a href="space_room.html">Galatic Bedroom</a>&nbsp;
-				<a href="../events/weekend.html">Weekend Events</a>&nbsp;
+				<a href="../events/weekend.html">Events</a>&nbsp;
 				<a href="../contact.html">Contact</a>
 			</nav>
 			<!--Main Section-->
@@ -31,10 +31,10 @@
 				<h2>Everything That You Need To Know</h2>
 					<p>Wondering what's included and how much it costs? Look no further than below!</p>
 					<dl>
-						<dt>Room Pricing</dt>
+						<dt>>Room Pricing</dt>
 							<dd>Weekdays $125 per night</dd>
 							<dd>Weekends $150 per night</dd>
-						<dt>What's Included</dt>
+						<dt>>What's Included</dt>
 							<dd>You will get free breakfast! Common amenities like towels, brushes, and more!</dd>
 							<dd>Feel free to <a href="../conatct.html">contact us</a> if you wanna know more!</dd>
 					</dl>
