--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<!--Head Section-->
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Hulber's Bed & Breakfest</title> <!--This changes the title of the tab-->
 		<meta charset="utf-8"> <!--This defines the charecter unicode that the site will use-->
 		<link href="styles/styles.css" rel="stylesheet"> <!--This links the style sheet-->
@@ -16,15 +17,34 @@
 			</header>
 			<!--Navigation Section-->
 			<nav>
-				<a href="index.html">Home</a>&nbsp;
-				<a href="rooms/lavender_room.html">Cozy Lavender Room</a>&nbsp;
-				<a href="rooms/space_room.html">Galatic Bedroom</a>&nbsp;
-				<a href="events/weekend.html">Events</a>&nbsp;
-				<a href="contact.html">Contact</a>
+				<ul>
+					<li><a href="index.html">Home</a>&nbsp;</li>
+					<li><a href="rooms/lavender_room.html">Cozy Lavender Room</a>&nbsp;</li>
+					<li><a href="rooms/space_room.html">Galatic Bedroom</a>&nbsp;</li>
+					<li><a href="events/weekend.html">Events</a>&nbsp;</li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
 			</nav>
 			<!--Main Section-->
 			<main>
 				<h2>Contact form </h2>
+				<form method="post" action="https://webdevbasics.net/scripts/demo.php">
+					<fieldset><legend>Customer Info</legend>
+						<label>First Name: <input type="text" name="FirstName" id="FirstName" required></label><br>
+						<label>Last Name: <input type="text" name="LastName" id="LastName" required></label><br>
+						<label>Email: <input type="email" name="Email" id="Email" required></label><br>
+						<label>Phone #: <input type="tel" name="Telephone" id="Telephone" required></label>
+					</fieldset><br>
+					<fieldset><legend>Comments</legend>
+						<label>What type of response are you filling out today?</label><br>
+						<label>Question<input type="radio" name="Question/Complaint" value="Question" checked></label>
+						<label>Complaint<input type="radio" name="Question/Complaint" value="Complaint"></label><br>
+						<label>Ask (or complain) away here:</label><br>
+						<label><textarea name="Comments" id="Comments" cols="50" rows="20"></textarea></label>
+					</fieldset>
+					<br><input type="submit">
+					<input type="reset">
+				</form>
 			</main>
 			<!--Footer Section-->
 			<footer>
