Phase 5 files uploaded

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<title>Hulber's Bed & Breakfest</title> <!--This changes the title of the tab-->
 		<meta charset="utf-8"> <!--This defines the charecter unicode that the site will use-->
 		<link href="styles/styles.css" rel="stylesheet"> <!--This links the style sheet-->
-		<link rel="icon" type="image/png" href="images/icon.png"> <!--This icon was created by me for a GTA Online crew, very interesting right? You can find it via this link: https://prod.cloud.rockstargames.com/crews/sc/3986/70001500/publish/emblem/emblem_128.png -->
+		<link rel="icon" type="image/png" href="media/icon.png"> <!--This icon was created by me for a GTA Online crew, very interesting right? You can find it via this link: https://prod.cloud.rockstargames.com/crews/sc/3986/70001500/publish/emblem/emblem_128.png -->
 	</head>
 	<!--Body Section-->
 	<body>
@@ -20,14 +20,16 @@
 				<ul>
 					<li><a href="index.html">Home</a>&nbsp;</li>
 					<li><a href="rooms/lavender_room.html">Cozy Lavender Room</a>&nbsp;</li>
-					<li><a href="rooms/space_room.html">Galatic Bedroom</a>&nbsp;</li>
+					<li><a href="rooms/space_room.html">Galactic Bedroom</a>&nbsp;</li>
 					<li><a href="events/weekend.html">Events</a>&nbsp;</li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 			<!--Main Section-->
 			<main>
-				<h2>Contact form </h2>
+				<h2>Contact Form</h2>
+				<p>Please fill out the form below with your contact infromation and comments. We will contact you within 1-2 days!</p>
+				<p>You can also call our desk from 8am to 8pm at <a href="tel:123-456-7890">(123)-456-7890</a></p>
 				<form method="post" action="https://webdevbasics.net/scripts/demo.php">
 					<fieldset><legend>Customer Info</legend>
 						<label>First Name: <input type="text" name="FirstName" id="FirstName" required></label><br>
@@ -48,7 +50,7 @@
 			</main>
 			<!--Footer Section-->
 			<footer>
-				Copyright &copy; 2025 <a href="mailto:hjespinosa@amarillocollege.com">Webmaster</a> (prices don't include tax)
+				Copyright &copy; 2025 <a href="mailto:hjespinosa@amarillocollege.com">Webmaster</a> (prices don't include tax)<br>Last modified: <script>document.write(document.lastModified);</script>
 			</footer>
 		</div>
 	</body>
